<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G_IO" Id="{2437699e-6b47-4df9-8f46-632e8cfc061f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Digital Inputs
	bEmgOk 			AT %I* : BOOL; 
	bStartButton 	AT %I* : BOOL;
	bStopButton 	AT %I* : BOOL; 
	bOffSwtich		AT %I* : BOOL;  
	bManualSwtich	AT %I* : BOOL; 
	bAutoSwtich		AT %I* : BOOL; 
	bWinchEnable 	AT %I* : BOOL; 
	bCylinderEnable AT %I* : BOOL; 
	
	// Analog Intputs
	fJoyXraw 		AT %I* : INT; 
	fJoyYraw		AT %I* : INT; 
	fJoyZraw 		AT %I* : INT; 
	
	// Digital Outputs
	bOpenBrakes 	AT %Q* : BOOL; 
	bEnablePCDV 	AT %Q* : BOOL; 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>